<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/welcome_title"
        android:textColor="@color/bordo"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/welcome_subtitle"
        android:textColor="@color/bordo"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <EditText
        android:id="@+id/etRoom"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:minHeight="60dp"
        android:hint="@string/room_hint"
        android:inputType="number"
        android:textColor="@color/bordo"
        android:autofillHints="username"
        android:importantForAutofill="yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:minHeight="60dp"
        android:hint="@string/first_name_hint"
        android:inputType="textCapWords|textPersonName"
        android:imeOptions="actionNext"
        android:layout_marginTop="12dp"
        android:textColor="@color/bordo"
        android:autofillHints="name"
        android:importantForAutofill="yes"
        app:layout_constraintTop_toBottomOf="@id/etRoom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:minHeight="60dp"
        android:hint="@string/last_name_hint"
        android:inputType="textCapWords|textPersonName"
        android:imeOptions="actionNext"
        android:layout_marginTop="12dp"
        android:textColor="@color/bordo"
        android:autofillHints="familyName"
        android:importantForAutofill="yes"
        app:layout_constraintTop_toBottomOf="@id/etFirstName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:text="@string/continue_button"
        android:textSize="20dp"
        android:backgroundTint="@color/bordo"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/etLastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>