<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".ChatActivity">

    <TextView
        android:id="@+id/hotelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/hotel_title"
        android:textColor="@color/bordo"
        android:textSize="34sp"
        android:fontFamily="serif"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/conciergeStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/concierge_online"
        android:textColor="@color/bordo"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/hotelTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/chatBubble"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:minHeight="77dp"
        android:background="@drawable/chat_bubble"
        android:padding="20dp"
        android:text="@string/welcome_message"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:importantForAccessibility="yes"
        app:layout_constraintBottom_toTopOf="@+id/messageInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/conciergeStatus" />

    <androidx.cardview.widget.CardView
        android:id="@+id/messageInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/openCatalogButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/messageEditText"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:minHeight="50dp"
                android:background="@android:color/transparent"
                android:hint="@string/message_hint"
                android:inputType="textMultiLine|textCapSentences"
                android:paddingStart="20dp"
                android:paddingEnd="60dp"
                android:autofillHints="message"
                android:importantForAutofill="yes"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/sendButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/send_button_background"
                android:contentDescription="@string/send_message"
                android:importantForAccessibility="yes"
                android:src="@drawable/ic_arrow_forward"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/openCatalogButton"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginBottom="40dp"
        android:text="@string/open_catalog"
        android:textAllCaps="false"
        android:backgroundTint="@color/bordo"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>